test/compile_error/typemismatch.conf.7.def
config type_mismatch_conf {
	foo : int(2147483648);
}
